--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>MyResume Bootstrap Template - Index</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <title>el2zay</title>
+  <meta content="Bienvenue sur le site de el2zay ici vous pourrez trouver des informations sur moi ainsi que mes projets." name="description">
+  <meta content="el2zay, Elbot" name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
