--- a/index.html
+++ b/index.html
@@ -151,12 +151,12 @@
         <div class="row">
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
             <div class="icon"><i class="bx bx-bot"></i></div>
-            <h4 class="title"><a href="">Elbot</a></h4>
+            <h4 class="title"><a href="https://el2zay.is-a.dev/elbot">Elbot</a></h4>
             <p class="description">Elbot est un bot discord français qui est open source, et dont le code est disponible sur Github. <br> Il est codé en JavaScript. <br> <i>Cliquez sur le titre pour plus d'informations. </i>  </p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
             <div class="icon"><i class='bx bx-alarm' ></i></div>
-            <h4 class="title"><a href="">Reveilleur de bot</a></h4>
+            <h4 class="title"><a href="https://el2zay.is-a.dev/erreur">Reveilleur de bot</a></h4>
             <p class="description">Reveilleur de bot est un bot qui sert à réveiller des bots qui sont héberger sur des hébergeurs gratuit tel que Glitch. <br> <i>Cliquez sur le titre pour plus d'informations. <i> </p>
           
     </section><!-- End Projets Section -->
