--- a/elbot/index.html
+++ b/elbot/index.html
@@ -220,7 +220,7 @@
       <p>Une idée de commande ? Envoyez un message sur un de mes réseaux sociaux que vous trouverez sur la  <a href="https://el2zay.is-a.dev">page principale</a> Vous pouvez regarder aussi les prochaines commandes de Elbot.</p>
     </div>
   </div>
-  <div><b>COMMANDE MUSIQUE (LA MUSIQUE EST EN CE MOMENT HS MAIS REVIENT BIENTOT)</b></div>
+  <div><b>COMMANDE MUSIQUE</b></div>
   <div class="row">
 
     <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
