--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
             <div class="icon"><i class='bx bx-alarm' ></i></div>
-            <h4 class="title"><a href="https://el2zay.is-a.dev/erreur">Reveilleur de bot</a></h4>
+            <h4 class="title"><a href="https://el2zay.is-a.dev/404.html">Reveilleur de bot</a></h4>
             <p class="description">Reveilleur de bot est un bot qui sert à réveiller des bots qui sont héberger sur des hébergeurs gratuit tel que Glitch. <br> <i>Cliquez sur le titre pour plus d'informations. <i> </p>
           
     </section><!-- End Projets Section -->
