--- a/elbot/index.html
+++ b/elbot/index.html
@@ -98,8 +98,9 @@
             <ul>
               <li><i class="bi bi-check-circle"></i> En ligne 7j/7 24h/24</li>
               <li><i class="bi bi-check-circle"></i> Gratuit et Open Source</li>
-              <li><i class="bi bi-check-circle"></i> Codé en JavaScript</li>
+              <li><i class="bi bi-check-circle"></i> Codé en JavaScript et Python</li>
               <li><i class="bi bi-check-circle"></i>Musique</li>
+              <li><i class="bi bi-check-circle"></i>Surveillé par Watchbot</li>
             </ul>
           </div>
         </div>
@@ -114,7 +115,7 @@
 
         <div class="section-title">
           <h2>Page d'aide</h2>
-          <p>Ici vous trouverez toutes les commandes de Elbot. (le prefix est "e!")</p>
+          <p>Ici vous trouverez toutes les commandes de Elbot. (le prefix est "e!")                       [mise à jour: 23/08/2021 20h33]</p>
         </div>
 <div><b>COMMANDE ÉCRITE</b></div>
       
@@ -123,77 +124,82 @@
   <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
     <div class="icon-box iconbox-blue">
       <h4>pessi</h4></a>
-      <p><b>Description : </b>Pour connaitre tous les mots de pessis<br><b>Permission : </b>Envoyer un message<br><b>WARN : </b>Aucun</p>
+      <p><b>Description : </b>Pour connaitre tous les mots de pessis<br><b>Permission : </b>Envoyer un message<br><b>WARN : </b>Aucun <b><br>Code:</b> JS</p>
     </div>
   </div>
 
   <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
     <div class="icon-box iconbox-blue">
       <h4>say</h4>
-      <p><b>Description : </b>Pour me faire dire tout et n'importe quoi<br><b>Permission : </b>Gérer les messages<br><b>WARN : </b>Vous ne pouvez pas mentionner @here/@everyone</p>
+      <p><b>Description : </b>Pour me faire dire tout et n'importe quoi<br><b>Permission : </b>Gérer les messages<br><b>WARN : </b>Vous ne pouvez pas mentionner @here/@everyone</b> <b><br>Code:</b> JS</p>
     </div>
   </div>
-
+  <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
+    <div class="icon-box iconbox-blue">
+      <h4>chinese</h4>
+      <p><b>Description : </b>Pour me faire dire tout et n'importe quoi mais où les caractères sont transformer en caractères chinois.<br><b>Permission : </b>Gérer les messages<br><b>WARN : </b>Vous ne pouvez pas mentionner @here/@everyone</b> <br> <b> Exepmle: </b> e!chinesse Bonjour Elbot répond: <br>书口冂丿口凵尺<br>Code:</b> Python</p>
+    </div>
+  </div>
   <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
     <div class="icon-box iconbox-blue">
       <h4>uno</h4>
-      <p><b>Description : </b>Pour avoir la carte changement de sens<br><b>Permission : </b>Envoyer une image et un message.<br><b>WARN : </b>Aucun</p>
+      <p><b>Description : </b>Pour avoir la carte changement de sens<br><b>Permission : </b>Envoyer une image et un message.<br><b>WARN : </b>Aucun</b> <b><br>Code:</b> JS</p>
     </div>
   </div>
 
   <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
     <div class="icon-box iconbox-blue">
       <h4>sondage</h4>
-      <p><b>Description : </b>Crée un sondage avec les choix "oui" et "non" grâce aux réactions.<br><b>Permission : </b>Envoyer un message et des réactions<br><b>WARN : </b>Aucun</p>
+      <p><b>Description : </b>Crée un sondage avec les choix "oui" et "non" grâce aux réactions.<br><b>Permission : </b>Envoyer un message et des réactions<br><b>WARN : </b>Aucun</b> <b><br>Code:</b> JS</p>
     </div>
   </div>
 
   <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
     <div class="icon-box iconbox-blue">
       <h4>test</h4>
-      <p><b>Description : </b>Pour savoir si je fonctionne et lequel des codes fonctionnent.<br><b>Permission : </b>Envoyer un message<br><b>WARN : </b>Aucun</p>
+      <p><b>Description : </b>Pour savoir si je fonctionne et lequel des codes fonctionnent.<br><b>Permission : </b>Envoyer un message<br><b>WARN : </b>Aucun</b> <b><br>Code:</b> JS</p>
     </div>
   </div>
 
   <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
     <div class="icon-box iconbox-blue">
       <h4>infoserver</h4>
-      <p><b>Description : </b>Pour connaitre les informations importantes sur ce serveur<br><b>Permission : </b>Envoyer un message embed<br><b>WARN: </b>Aucun</p>
+      <p><b>Description : </b>Pour connaitre les informations importantes sur ce serveur<br><b>Permission : </b>Envoyer un message embed<br><b>WARN: </b>Aucun</b> <b><br>Code:</b> JS</p>
     </div>
   </div>
 
   <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
     <div class="icon-box iconbox-blue">
       <h4>restart</h4>
-      <p><b>Description : </b>Redémarre / déconnecte et reconnecte le robot de Discord.<br><b>Permission : </b>Créateur<br><b>WARN</b>Aucun</p>
+      <p><b>Description : </b>Redémarre / déconnecte et reconnecte le robot de Discord.<br><b>Permission : </b>Créateur<br><b>WARN : </b>Aucun</b> <b><br>Code:</b> JS</p>
     </div>
   </div>
 
   <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
     <div class="icon-box iconbox-blue">
       <h4>number</h4>
-      <p><b>Description : </b>Pour avoir un nombre au hasard entre 1 et 100.<br><b>Permission : </b>Envoyer un message<br><b>WARN : </b>Aucun</p>
+      <p><b>Description : </b>Pour avoir un nombre au hasard entre 1 et 100.<br><b>Permission : </b>Envoyer un message<br><b>WARN : </b>Aucun</b> <b><br>Code:</b> JS</p>
     </div>
   </div>
 
   <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
     <div class="icon-box iconbox-blue">
       <h4>heberger</h4>
-      <p><b>Description : </b> Pour savoir sur quel hébergeur je suis héberger en ce moment!<br><b>Permission : </b>Envoyer un message<br><b>WARN : </b>Peut ne pas être à jour automatiquement</p>
+      <p><b>Description : </b> Pour savoir sur quel hébergeur je suis héberger en ce moment!<br><b>Permission : </b>Envoyer un message<br><b>WARN : </b>Peut ne pas être à jour automatiquement</b>Aucun <b><br>Code:</b> JS et Python</p>
     </div>
   </div>
 
   <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
     <div class="icon-box iconbox-blue">
       <h4>ping</h4>
-      <p><b>Description : </b>Affiche le temps de latence du bot en ms.<br><b>Permission : </b>Envoyer un message<br><b>WARN : </b>Aucun</p>
+      <p><b>Description : </b>Affiche le temps de latence du bot en ms.<br><b>Permission : </b>Envoyer un message<br><b>WARN : </b>Aucun</b> <b><br>Code:</b> JS</p>
     </div>
   </div>
 
   <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
     <div class="icon-box iconbox-blue">
       <h4>clear</h4>
-      <p><b>Description : </b>Pour clear le nombre de message que vous souhaitiez <br><b>Permission : </b>Gérer les messages<br><b>WARN : </b>Max: 100</p>
+      <p><b>Description : </b>Pour clear le nombre de message que vous souhaitiez <br><b>Permission : </b>Gérer les messages<br><b>WARN : </b>Max: 100</b> <b><br>Code:</b> JS</p>
     </div>
   </div>
 
@@ -202,22 +208,55 @@
   <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
     <div class="icon-box iconbox-blue">
       <h4>invite</h4>
-      <p><b>Description : </b>Donne un lien d'invitation pour inviter le bot sur votre serveur.<br><b>Permission : </b>Aucune<br><b>Lieu : </b>MP / Textuel</p>
+      <p><b>Description : </b>Donne un lien d'invitation pour inviter le bot sur votre serveur.<br><b>Permission : </b>Aucune<br><b>Lieu : </b>MP / Textuel</b> <b><br>Code:</b> JS</p>
     </div>
   </div>
 
   <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
     <div class="icon-box iconbox-blue">
       <h4>github</h4>
-      <p><b>Description : </b>Pour afficher le code github<br><b>Permission : </b>Envoyer un message<br><b>WARN : </b>Il est disponible sur ce site. Et le repo n'est pas mis à jour manuellement</p>
+      <p><b>Description : </b>Pour afficher le code github<br><b>Permission : </b>Envoyer un message<br><b>WARN : </b>Il est disponible sur ce site. Et le repo n'est pas mis à jour manuellement</b> <b><br>Code:</b> JS</p>
     </div>
   </div>
+  <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
+    <div class="icon-box iconbox-blue">
+      <h4>funfact</h4>
+      <p><b>Description : </b>Pour connaitre une anecdote sur Elbot.<br><b>Permission : </b>Envoyer un message<br><b>WARN : </b>Aucun <b><br>Code: </b> Python</p>
+    </div>
+  </div>
+  <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
+    <div class="icon-box iconbox-blue">
+      <h4>kick</h4>
+      <p><b>Description : </b>Pour expulser un membre sur un serveur.<br><b>Permission : </b>Expulser un membre<br><b>WARN : </b>Aucun <b><br>Code: </b> Python</p>
+    </div>
+  </div>
+  <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
+    <div class="icon-box iconbox-blue">
+      <h4>ban</h4>
+      <p><b>Description : </b>Pour débannir un membre sur un serveur<br><b>Permission : </b>Bannir un membre<br><b>Code: </b> Python</p>
+    </div>
+  </div>
+  <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
+    <div class="icon-box iconbox-blue">
+      <h4>unban</h4>
+      <p><b>Description : </b>Pour débannir un membre sur un serveur<br><b>Permission : </b>Bannir un membre<br><b>Exemple : </b>e!unban el2zay#1234 <b><br>Code: </b> Python</p>
+    </div>
+  </div>
+  <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
+    <div class="icon-box iconbox-blue">
+      <h4>roulette</h4>
+      <p><b>Description : </b>Pour tirer au hasard qui gagnera des participants un ban ou kick ou rôle personnalisé un mute ou un gage.<br><b>Permission : </b>Envoyer un message<br><b>WARN : </b>Aucun <b><br>Code: </b> Python</p>
+    </div>
+  </div>
+
+
+
 
   
   <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
     <div class="icon-box iconbox-blue">
       <h4>D'autres commandes...</h4>
-      <p>Une idée de commande ? Envoyez un message sur un de mes réseaux sociaux que vous trouverez sur la  <a href="https://el2zay.is-a.dev">page principale</a> Vous pouvez regarder aussi les prochaines commandes de Elbot.</p>
+      <p>Une idée de commande ? Envoyez un message sur un de mes réseaux sociaux que vous trouverez sur la  <a href="https://el2zay.is-a.dev">page principale</a> Vous pouvez regarder aussi les prochaines commandes de Elbot.</b> </p>
     </div>
   </div>
   <div><b>COMMANDE MUSIQUE</b></div>
@@ -226,21 +265,21 @@
     <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
       <div class="icon-box iconbox-blue">
         <h4>play</h4></a>
-        <p><b>Description : </b>Joue de la musique grâce à un lien youtube<br><b>Permission : </b>Se connecter à un salon vocal et parler.<br><b>Exemple : </b>e!play https://www.https//www.youtube.com/watch?v=n3UBSa7-H0U pour diffuser la musique Petrouchka dans un salon</p>
+        <p><b>Description : </b>Joue de la musique grâce à un lien youtube<br><b>Permission : </b>Se connecter à un salon vocal et parler.<br><b>Exemple : </b>e!play https://www.https//www.youtube.com/watch?v=n3UBSa7-H0U pour diffuser la musique Petrouchka dans un salon</b>Aucun <b><br>Code:</b> JS</p>
       </div>
     </div>
   
     <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
       <div class="icon-box iconbox-blue">
         <h4>stop</h4>
-        <p><b>Description : </b>Arrête la musique.<br><b>Permission : </b>Se connecter à un salon vocal et parler.<br><b>WARN : </b>Vous devez être dans le même salon que elbot pour arrêter la musique. </p>
+        <p><b>Description : </b>Arrête la musique.<br><b>Permission : </b>Se connecter à un salon vocal et parler.<br><b>WARN : </b>Vous devez être dans le même salon que elbot pour arrêter la musique.</b>Aucun <b><br>Code:</b> JS </p>
       </div>
     </div>
   
     <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
       <div class="icon-box iconbox-blue">
         <h4>brique</h4>
-        <p><b>Description : </b>Pour que elbot chante tutititutu<br><b>Permission : </b>Se connecter à un salon vocal et parler.<br><b>WARN : </b>Disponible uniquement dans le salon #817012298057121852</p>
+        <p><b>Description : </b>Pour que elbot chante tutititutu<br><b>Permission : </b>Se connecter à un salon vocal et parler.<br><b>WARN : </b>Disponible uniquement dans le salon #817012298057121852</b>Aucun<br><b>Code:</b> JS <b></p>
       </div>
     </div>
   
