--- a/elbot/index.html
+++ b/elbot/index.html
@@ -48,6 +48,7 @@
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Accueil</a></li>
           <li><a class="nav-link scrollto" href="#about">À propos</a></li>
+          <li><a class="nav-link scrollto" href="https://bit.ly/33sfsMv">Github</a></li>
           <li><a class="nav-link scrollto" href="#services">Help</a></li>
             <ul>
              
