--- a/404.html
+++ b/404.html
@@ -9,12 +9,12 @@
 
     <div id="carte">
 
-    <h1>Site bientôt disponible</h1>
+    <h1>ERREUR 404</h1>
 
-<p>ERREUR 404: LE SITE DU REVEILLEUR AINSI QUE LE MODE SOMBRE SONT BIENTOT DISPONIBLE <p>
+<p>ERREUR 404: LE site que vous cherchez n'est pas disponible pour le moment ou n'existe pas <p>
     <br> <p>En attendant vous avez un magnifique nyan cat...</p>
   
-    <img src="https://f8n-production.s3.amazonaws.com/creators/profile/c8gley51s-nyan-cat-large-gif-gif-mbf1sa.gif" width="100" height="100" alt="quel bg">
+    <img src="https://f8n-production.s3.amazonaws.com/creators/profile/c8gley51s-nyan-cat-large-gif-gif-mbf1sa.gif" width="300" height="300" alt="quel bg">
 <p>Pour revenir sur le site principal (qui fonctionne) cliquez <a href="https://el2zay.is-a.dev">ici</a></p>
 
 
