--- a/404.html
+++ b/404.html
@@ -11,10 +11,10 @@
 
     <h1>ERREUR 404</h1>
 
-<p>ERREUR 404: LE site que vous cherchez n'est pas disponible pour le moment ou n'existe pas <p>
+<p>ERREUR 404: Le site que vous cherchez n'est pas disponible pour le moment ou n'existe pas <p>
     <br> <p>En attendant vous avez un magnifique nyan cat...</p>
   
-    <img src="https://f8n-production.s3.amazonaws.com/creators/profile/c8gley51s-nyan-cat-large-gif-gif-mbf1sa.gif" width="500" height="500" alt="quel bg">
+    <img src="https://f8n-production.s3.amazonaws.com/creators/profile/c8gley51s-nyan-cat-large-gif-gif-mbf1sa.gif" width="450" height="450" alt="quel bg">
 <p>Pour revenir sur le site principal (qui fonctionne) cliquez <a href="https://el2zay.is-a.dev">ici</a></p>
 
 
