--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <h3>Développeur JavaScript </h3>
+            <h3>Développeur JavaScript et de plus en plus Python</h3>
             <p class="fst-italic">
               Voici mes informations et mes adresses de contact.
             </p>
@@ -156,7 +156,7 @@
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
             <div class="icon"><i class='bx bx-alarm' ></i></div>
-            <h4 class="title"><a href="https://el2zay.is-a.dev/404.html">Reveilleur de bot</a></h4>
+            <h4 class="title"><a href="https://github.com/el2zay/reveilleurdebot/tree/main">Reveilleur de bot</a></h4>
             <p class="description">Reveilleur de bot est un bot qui sert à réveiller des bots qui sont héberger sur des hébergeurs gratuit tel que Glitch. <br> <i>Cliquez sur le titre pour plus d'informations. <i> </p>
           
     </section><!-- End Projets Section -->
