--- a/elbot/index.html
+++ b/elbot/index.html
@@ -274,7 +274,7 @@
     <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
       <div class="icon-box iconbox-blue">
         <h4>play</h4></a>
-        <p><b>Description : </b>Joue de la musique grâce à un lien youtube<br><b>Permission : </b>Se connecter à un salon vocal et parler.<br><b>Exemple : </b>e!play https://www.https//www.youtube.com/watch?v=n3UBSa7-H0U pour diffuser la musique Petrouchka dans un salon</b>Aucun <b><br>Code:</b> JS</p>
+        <p><b>Description : </b>Joue de la musique grâce à un lien youtube<br><b>Permission : </b>Se connecter à un salon vocal et parler.<br><b>Exemple : </b>e!play https://www.https//www.youtube.com/watch?v=n3UBSa7-H0U pour diffuser la musique Petrouchka dans un salon</b> <b><br>Code:</b> JS</p>
       </div>
     </div>
   
