--- a/test/index.html
+++ b/test/index.html
@@ -79,7 +79,7 @@
 
     <div id="Detector">
       <script>
-          if(/Apple/i.test(navigator.userAgent)){
+          if(/iPhone|iPad|iPod|Mac/i.test(navigator.userAgent)){
               document.getElementById("Detector").innerHTML += "<h3>Apple device detecté</h3>";
           }
 
