--- a/test/index.html
+++ b/test/index.html
@@ -95,10 +95,10 @@
 
 <script>          
   if(/Android|Windows|Linux/i.test(navigator.userAgent)){
-  document.getElementById("Detector1").innerHTML += "<h3>Apple device non detecté</h3>";
+  document.getElementById("Detector").innerHTML += "<h3>Apple device non detecté</h3>";
 
   function showExplication() {
-      document.getElementById("Detector1").innerHTML += 
+      document.getElementById("Detector").innerHTML += 
         "<h3>Apple device non detecté</h3>";
                       document.getElementById("showExplication").disabled = true;
   }
