--- a/elbot/index.html
+++ b/elbot/index.html
@@ -48,8 +48,10 @@
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Accueil</a></li>
           <li><a class="nav-link scrollto" href="#about">À propos</a></li>
-          <li><a class="nav-link scrollto" href="https://bit.ly/33sfsMv">Github</a></li>
           <li><a class="nav-link scrollto" href="#services">Help</a></li>
+          <li><a class="nav-link scrollto" href="#features">Prochainement</a></li>
+          <li><a class="nav-link scrollto" href="https://bit.ly/33sfsMv">Github</a></li>
+
             <ul>
              
           <li><a class="getstarted scrollto" href="https://discord.com/api/oauth2/authorize?client_id=809344905674489866&permissions=174852013767&scope=bot%20applications.commands">Invitez-moi</a></li>
