--- a/404.html
+++ b/404.html
@@ -6,6 +6,12 @@
 <title></title>
 <link rel="stylesheet" href="style.css">
 
+<style>
+    @import url('http://fonts.cdnfonts.com/css/kollektif');
+    </style>
+<style>
+    @import url('https://fonts.googleapis.com/css2?family=Mansalva&display=swap');
+    </style>
 
   <!-- Vendor CSS Files -->
   <link href="assets1/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
@@ -16,13 +22,17 @@
 <body>
     <div id="carte">
 
-
         <h1><br>Erreur 404</h1>
+
     <h2>Mince la page est introuvable, encore un coup de Nyan Cat! <br> Au moins il est là pour te réconforter...</h2>   
     <img src="Erreur_404_-_Elie_Concept-removebg-preview.png" alt="bg de Nyan Cat" width="900" height="800">
 
-        <h3><br><br><br><br><br><br><br><br><br><br><br><br><br>Bon comme t'as l'air perdu voici quelque chose qui te mènera sur le droit chemin <br> <a href="https://el2zay.is-a.dev"> Page Principale</a> <br>Contact:      
+        <h3><br><br><br><br><br><br><br><br><br><br><br>Bon comme t'as l'air perdu voici quelque chose qui te mènera sur le droit chemin <br> <a href="https://el2zay.is-a.dev"> Page Principale</a> <br>Contact:      
            </h3>
+
+           <h5>
+               v0.1.1 BETA 404 
+           </h5>
             <h4>
             <a href="https://instagram.com/el2zay" class="instagram"><i class="bx bxl-instagram"></i></a>
             <a href="https://twitter.com/el2zay" class="twitter"><i class="bx bxl-twitter"></i></a>
@@ -31,9 +41,7 @@
             <a href="https://dsc.bio/el2zay" class="discord"><i class="bx bxl-discord"></i></a>
             <a href="mailto:el2zay.contact@gmail.com" class="contact"><i class='bx bx-envelope'></i></i></a>
               </h4>
-            
 
-       
 
 
 </body>
