--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="style.css">
 
 <style>
-    @import url('http://fonts.cdnfonts.com/css/kollektif');
+    @import url('https://fonts.cdnfonts.com/css/kollektif');
     </style>
 <style>
     @import url('https://fonts.googleapis.com/css2?family=Mansalva&display=swap');
