--- a/404.html
+++ b/404.html
@@ -59,7 +59,7 @@
 			</div>
 			<div class="cat">
 				<div class="oh">
-					<img src="nayancat.png" alt="bg de Nyan Cat" width="495" height="169" />
+					<img src="/nayancat.png" alt="bg de Nyan Cat" width="495" height="169" />
 				</div>
 			</div>
 			<small>v1.0.1 STABLE 404</small>
