--- a/elbot/index.html
+++ b/elbot/index.html
@@ -54,7 +54,7 @@
 
             <ul>
              
-          <li><a class="getstarted scrollto" href="https://discord.com/api/oauth2/authorize?client_id=809344905674489866&permissions=174852013767&scope=bot%20applications.commands">Invitez-moi</a></li>
+          <li><a class="getstarted scrollto" href="https://discord.com/api/oauth2/authorize?client_id=809344905674489866&permissions=140932673143&scope=bot">Invitez-moi</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -70,7 +70,7 @@
         <div class="col-xl-5 col-lg-6 pt-3 pt-lg-0 order-2 order-lg-1 d-flex flex-column justify-content-center">
           <h1>ELBOT</h1>
           <h2>Un bot Discord qui fait plein de petits trucs</h2>
-          <div><a href="https://discord.com/api/oauth2/authorize?client_id=809344905674489866&permissions=174852013767&scope=bot%20applications.commands" class="btn-get-started scrollto">Invitez-moi</a></div>
+          <div><a href="https://discord.com/api/oauth2/authorize?client_id=809344905674489866&permissions=140932673143&scope=bot" class="btn-get-started scrollto">Invitez-moi</a></div>
         </div>
 
           <div class="col-xl-4 col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-in" data-aos-delay="150">
