--- a/elbot/index.html
+++ b/elbot/index.html
@@ -109,7 +109,7 @@
             <ul>
               <li><i class="bi bi-check-circle"></i> En ligne 7j/7 24h/24</li>
               <li><i class="bi bi-check-circle"></i> Gratuit et Open Source</li>
-              <li><i class="bi bi-check-circle"></i> Codé en JavaScript et Python</li>
+              <li><i class="bi bi-check-circle"></i> Codé en Python</li>
               <li><i class="bi bi-check-circle"></i>Musique</li>
               <li><i class="bi bi-check-circle"></i>Surveillé par Watchbot</li>
             </ul>
@@ -126,7 +126,7 @@
 
         <div class="section-title">
           <h2>Page d'aide</h2>
-          <p>Ici vous trouverez toutes les commandes de Elbot. (le prefix est "e!")                       [mise à jour: 23/08/2021 20h33]</p>
+          <p>Ici vous trouverez toutes les commandes de Elbot. (le prefix est "e!") [mise à jour: 06/11/2021 15h33]<br> <h8>36 commandes fonctionnelles et publiques.</h8></p>
         </div>
 <div><b>COMMANDE ÉCRITE</b></div>
       
@@ -135,82 +135,90 @@
   <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
     <div class="icon-box iconbox-blue">
       <h4>pessi</h4></a>
-      <p><b>Description : </b>Pour connaitre tous les mots de pessis<br><b>Permission : </b>Envoyer un message<br><b>WARN : </b>Aucun <b><br>Code:</b> JS</p>
+      <p><b>Description : </b>Pour connaitre tous les mots de pessis<br><b>Permission : </b>Envoyer un message<br><b>WARN : </b>Aucun</p>
     </div>
   </div>
 
   <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
     <div class="icon-box iconbox-blue">
       <h4>say</h4>
-      <p><b>Description : </b>Pour me faire dire tout et n'importe quoi<br><b>Permission : </b>Gérer les messages<br><b>WARN : </b>Vous ne pouvez pas mentionner @here/@everyone</b> <b><br>Code:</b> JS</p>
+      <p><b>Description : </b>Pour me faire dire tout et n'importe quoi<br><b>Permission : </b>Gérer les messages<br><b>WARN : </b>Vous ne pouvez pas mentionner @here/@everyone</b></p>
     </div>
+  
   </div>
   <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
     <div class="icon-box iconbox-blue">
       <h4>chinese</h4>
-      <p><b>Description : </b>Pour me faire dire tout et n'importe quoi mais où les caractères sont transformer en caractères chinois.<br><b>Permission : </b>Gérer les messages<br><b>WARN : </b>Vous ne pouvez pas mentionner @here/@everyone</b> <br> <b> Exepmle: </b> e!chinesse Bonjour Elbot répond: <br>书口冂丿口凵尺<br>Code:</b> Python</p>
+      <p><b>Description : </b>Pour me faire dire tout et n'importe quoi mais où les caractères sont transformer en caractères chinois.<br><b>Permission : </b>Gérer les messages<br><b>WARN : </b>Vous ne pouvez pas mentionner @here/@everyone</b> <br> <b> Exepmle: </b> e!chinesse Bonjour Elbot répond: <br>书口冂丿口凵尺</p>
     </div>
   </div>
+
   <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
     <div class="icon-box iconbox-blue">
-      <h4>uno</h4>
-      <p><b>Description : </b>Pour avoir la carte changement de sens<br><b>Permission : </b>Envoyer une image et un message.<br><b>WARN : </b>Aucun</b> <b><br>Code:</b> JS</p>
+      <h4>contact</h4>
+      <p><b>Description : </b>Pour contacter el2zay via le bot<br><b>Permission : </b>Envoyer un message<br><b>WARN : Aucun</b></p> </div>
     </div>
-  </div>
 
   <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
     <div class="icon-box iconbox-blue">
       <h4>sondage</h4>
-      <p><b>Description : </b>Crée un sondage avec les choix "oui" et "non" grâce aux réactions.<br><b>Permission : </b>Envoyer un message et des réactions<br><b>WARN : </b>Aucun</b> <b><br>Code:</b> JS</p>
+      <p><b>Description : </b>Crée un sondage avec les choix "oui" et "non" grâce aux réactions.<br><b>Permission : </b>Envoyer un message et des réactions<br><b>WARN : </b>Ne fonctionne pas pour le moment.</b></p>
     </div>
   </div>
 
   <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
     <div class="icon-box iconbox-blue">
-      <h4>test</h4>
-      <p><b>Description : </b>Pour savoir si je fonctionne et lequel des codes fonctionnent.<br><b>Permission : </b>Envoyer un message<br><b>WARN : </b>Aucun</b> <b><br>Code:</b> JS</p>
+      <h4>infoserver/serverinfo</h4>
+      <p><b>Description : </b>Pour connaitre les informations importantes sur ce serveur<br><b>Permission : </b>Envoyer un message embed<br><b>WARN: </b>Aucun</b></p>
     </div>
   </div>
 
   <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
     <div class="icon-box iconbox-blue">
-      <h4>infoserver</h4>
-      <p><b>Description : </b>Pour connaitre les informations importantes sur ce serveur<br><b>Permission : </b>Envoyer un message embed<br><b>WARN: </b>Aucun</b> <b><br>Code:</b> JS</p>
+      <h4>infoserver2/serverinfo2</h4>
+      <p><b>Description : </b>Suite sur infoverser/serverinfo<br><b>Permission : </b>Envoyer un message embed<br><b>WARN: </b>Aucun</b></p>
     </div>
   </div>
 
   <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
     <div class="icon-box iconbox-blue">
-      <h4>restart</h4>
-      <p><b>Description : </b>Redémarre / déconnecte et reconnecte le robot de Discord.<br><b>Permission : </b>Créateur<br><b>WARN : </b>Aucun</b> <b><br>Code:</b> JS</p>
+      <h4>infouser</h4>
+      <p><b>Description : </b>Pour connaitre les informations sur un utilisateur<br><b>Permission : </b>Envoyer un message embed<br><b>WARN: </b>Aucun</b></p>
+    </div>
+  </div>
+
+  <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
+    <div class="icon-box iconbox-blue">
+      <h4>avatar</h4>
+      <p><b>Description : </b>Pour avoir l'avatar d'un utilisateur<br><b>Permission : </b>Envoyer un message embed<br><b>WARN: </b>Aucun</b></p>
     </div>
   </div>
 
   <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
     <div class="icon-box iconbox-blue">
       <h4>number</h4>
-      <p><b>Description : </b>Pour avoir un nombre au hasard entre 1 et 100.<br><b>Permission : </b>Envoyer un message<br><b>WARN : </b>Aucun</b> <b><br>Code:</b> JS</p>
+      <p><b>Description : </b>Pour avoir un nombre au hasard.<br><b>Permission : </b>Envoyer un message<br><b>WARN : </b>Aucun</b> </p>
     </div>
   </div>
 
   <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
     <div class="icon-box iconbox-blue">
       <h4>heberger</h4>
-      <p><b>Description : </b> Pour savoir sur quel hébergeur je suis héberger en ce moment!<br><b>Permission : </b>Envoyer un message<br><b>WARN : </b>Peut ne pas être à jour automatiquement</b>Aucun <b><br>Code:</b> JS et Python</p>
+      <p><b>Description : </b> Pour savoir sur quel hébergeur je suis héberger en ce moment!<br><b>Permission : </b>Envoyer un message<br><b>WARN : </b>Peut ne pas être à jour automatiquement
     </div>
   </div>
 
   <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
     <div class="icon-box iconbox-blue">
       <h4>ping</h4>
-      <p><b>Description : </b>Affiche le temps de latence du bot en ms.<br><b>Permission : </b>Envoyer un message<br><b>WARN : </b>Aucun</b> <b><br>Code:</b> JS</p>
+      <p><b>Description : </b>Affiche le temps de latence du bot en ms.<br><b>Permission : </b>Envoyer un message<br><b>WARN : </b>Aucun</b>
     </div>
   </div>
 
   <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
     <div class="icon-box iconbox-blue">
       <h4>clear</h4>
-      <p><b>Description : </b>Pour clear le nombre de message que vous souhaitiez <br><b>Permission : </b>Gérer les messages<br><b>WARN : </b>Max: 100</b> <b><br>Code:</b> JS</p>
+      <p><b>Description : </b>Pour clear le nombre de message que vous souhaitiez <br><b>Permission : </b>Gérer les messages<br><b>WARN : </b>Max: 100</b>
     </div>
   </div>
 
@@ -219,48 +227,132 @@
   <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
     <div class="icon-box iconbox-blue">
       <h4>invite</h4>
-      <p><b>Description : </b>Donne un lien d'invitation pour inviter le bot sur votre serveur.<br><b>Permission : </b>Aucune<br><b>Lieu : </b>MP / Textuel</b> <b><br>Code:</b> JS</p>
+      <p><b>Description : </b>Donne un lien d'invitation pour inviter le bot sur votre serveur.<br><b>Permission : </b>Aucune<br><b>Lieu : </b>MP / Textuel</b>
     </div>
   </div>
 
   <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
     <div class="icon-box iconbox-blue">
       <h4>github</h4>
-      <p><b>Description : </b>Pour afficher le code github<br><b>Permission : </b>Envoyer un message<br><b>WARN : </b>Il est disponible sur ce site. Et le repo n'est pas mis à jour manuellement</b> <b><br>Code:</b> JS</p>
+      <p><b>Description : </b>Pour afficher le code github<br><b>Permission : </b>Envoyer un message<br><b>WARN : </b>Il est disponible sur ce site. Et le repo n'est pas mis à jour manuellement</b>
     </div>
   </div>
   <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
     <div class="icon-box iconbox-blue">
       <h4>funfact</h4>
-      <p><b>Description : </b>Pour connaitre une anecdote sur Elbot.<br><b>Permission : </b>Envoyer un message<br><b>WARN : </b>Aucun <b><br>Code: </b> Python</p>
+      <p><b>Description : </b>Pour connaitre une anecdote sur Elbot.<br><b>Permission : </b>Envoyer un message<br><b>WARN : </b>Aucun
     </div>
   </div>
   <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
     <div class="icon-box iconbox-blue">
       <h4>kick</h4>
-      <p><b>Description : </b>Pour expulser un membre sur un serveur.<br><b>Permission : </b>Expulser un membre<br><b>WARN : </b>Aucun <b><br>Code: </b> Python</p>
+      <p><b>Description : </b>Pour expulser un membre sur un serveur.<br><b>Permission : </b>Expulser un membre<br><b>WARN : </b>Aucun 
     </div>
   </div>
   <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
     <div class="icon-box iconbox-blue">
       <h4>ban</h4>
-      <p><b>Description : </b>Pour débannir un membre sur un serveur<br><b>Permission : </b>Bannir un membre<br><b>Code: </b> Python</p>
+      <p><b>Description : </b>Pour débannir un membre sur un serveur<br><b>Permission : </b>Bannir un membre
     </div>
   </div>
   <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
     <div class="icon-box iconbox-blue">
       <h4>unban</h4>
-      <p><b>Description : </b>Pour débannir un membre sur un serveur<br><b>Permission : </b>Bannir un membre<br><b>Exemple : </b>e!unban el2zay#1234 <b><br>Code: </b> Python</p>
+      <p><b>Description : </b>Pour débannir un membre sur un serveur<br><b>Permission : </b>Bannir un membre<br><b>Exemple : </b>e!unban el2zay#1234
+    </div>
+
+  </div>
+
+
+ <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
+    <div class="icon-box iconbox-blue">
+      <h4>lock</h4>
+      <p><b>Description : </b>Verouiller un salon.<br><b>Permission : </b>Gérer les salons.<br><b>WARN : </b>Aucun </p>
+    </div>
+  </div>
+
+  <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
+    <div class="icon-box iconbox-blue">
+      <h4>unlock</h4>
+      <p><b>Description : </b>Déverouiller un salon.<br><b>Permission : </b>Gérer les salons.<br><b>WARN : </b>Aucun </p>
+    </div>
+  </div>
+
+  <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
+    <div class="icon-box iconbox-blue">
+      <h4>mute</h4>
+      <p><b>Description : </b>Pour muter un membre du serveur.<br><b>Permission : Gérer les messages.</b>.<br><b>WARN : </b>Aucun </p>
+    </div>
+  </div>
+
+  <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
+    <div class="icon-box iconbox-blue">
+      <h4>unmute</h4>
+      <p><b>Description : </b>Pour unmute un membre du serveur.<br><b>Permission : Gérer les messages.</b>.<br><b>WARN : </b>Aucun </p>
+    </div>
+  </div>
+
+  <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
+    <div class="icon-box iconbox-blue">
+      <h4>ticket</h4>
+      <p><b>Description : </b>Pour ouvrir un ticket<br><b>Permission : Aucune</b>.<br><b>WARN : </b>Disponible uniquement sur le serveur Elwatch </p>
+    </div>
+  </div>
+
+  <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
+    <div class="icon-box iconbox-blue">
+      <h4>close</h4>
+      <p><b>Description : </b>Pour fermer un ticket<br><b>Permission : Aucune</b>.<br><b>WARN : </b>Disponible uniquement sur le serveur Elwatch </p>
     </div>
   </div>
   <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
     <div class="icon-box iconbox-blue">
-      <h4>roulette</h4>
-      <p><b>Description : </b>Pour tirer au hasard qui gagnera des participants un ban ou kick ou rôle personnalisé un mute ou un gage.<br><b>Permission : </b>Envoyer un message<br><b>WARN : </b>Aucun <b><br>Code: </b> Python</p>
+      <h4>timer/minuteur</h4>
+      <p><b>Description : </b>Pour lancer un minuteur à la fin de ce minuteur vous serez averti par MP<br><b>Permission </b>: Envoyer un message</b>.<br><b>WARN : </b>Secondes uniquement pour l'instant</p>
+    </div>
+  </div>
+
+  <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
+    <div class="icon-box iconbox-blue">
+      <h4>removebg</h4>
+      <p><b>Description : </b><br>Enlever l'arrière plan d'un image.<br><b>Permission :</b> Envoyer un lien, Envoyer une image</b>.<br><b>WARN : </b>Un lien est requis. <br>Powered by removebg</p>
     </div>
   </div>
 
 
+  <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
+    <div class="icon-box iconbox-blue">
+      <h4>watchbot</h4>
+      <p><b>Description : </b><br>Voir le statut des bots amis à Elbot au fil du temps à l'aide de Watchbot<br><b>Permission :</b> Envoyer un message</b>.<br><b>WARN : </b> Aucun. </p>
+    </div>
+  </div>
+
+  <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
+    <div class="icon-box iconbox-blue">
+      <h4>choix</h4>
+      <p><b>Description : </b><br>Commande pour test les boutons que j'ai laissé...<b><br> Permission :</b> Envoyer un message</b>.<br><b>WARN : </b> Aucun. </p>
+    </div>
+  </div>
+
+  <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
+    <div class="icon-box iconbox-blue">
+      <h4>roulette</h4>
+      <p><b>Description : </b>Pour tirer au hasard qui gagnera des participants un ban ou kick ou rôle personnalisé un mute ou un gage.<br><b>Permission : </b>Envoyer un message<br><b>WARN : </b>Aucun </p>
+    </div>
+  </div>
+
+  <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
+    <div class="icon-box iconbox-blue">
+      <h4>pfc</h4>
+      <p><b>Description : </b>Faire un pierre feuille ciseaux<br><b>Permission : </b>Envoyer des messages.<br><b>Exemple : </b>e!pfc pierre </p>
+    </div>
+  </div>
+  <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
+    <div class="icon-box iconbox-blue">
+      <h4>cuisiner</h4>
+      <p><b>Description : </b>Faire un plat<br><b>Permission : </b>Envoyer des messages.<br><b>Exemple : </b>e!cuisine pâtes </p>
+    </div>
+  </div>
 
 
   
@@ -276,21 +368,43 @@
     <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
       <div class="icon-box iconbox-blue">
         <h4>play</h4></a>
-        <p><b>Description : </b>Joue de la musique grâce à un lien youtube<br><b>Permission : </b>Se connecter à un salon vocal et parler.<br><b>Exemple : </b>e!play https://www.https//www.youtube.com/watch?v=n3UBSa7-H0U pour diffuser la musique Petrouchka dans un salon</b> <b><br>Code:</b> JS</p>
+        <p><b>Description : </b>Joue de la musique grâce à un lien youtube<br><b>Permission : </b>Se connecter à un salon vocal et parler.<br><b>Exemple : </b>e!play https://www.https//www.youtube.com/watch?v=n3UBSa7-H0U pour diffuser la musique Petrouchka dans un salon</b>
       </div>
     </div>
   
     <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
       <div class="icon-box iconbox-blue">
         <h4>stop</h4>
-        <p><b>Description : </b>Arrête la musique.<br><b>Permission : </b>Se connecter à un salon vocal et parler.<br><b>WARN : </b>Vous devez être dans le même salon que elbot pour arrêter la musique.</b>Aucun <b><br>Code:</b> JS </p>
+        <p><b>Description : </b>Arrête la musique.<br><b>Permission : </b>Se connecter à un salon vocal et parler.<br><b>WARN : </b>Vous devez être dans le même salon que elbot pour arrêter la musique.</b></p>
       </div>
     </div>
+
+    <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
+      <div class="icon-box iconbox-blue">
+        <h4>pause</h4>
+        <p><b>Description : </b>Met en pause la musique.<br><b>Permission : </b>Se connecter à un salon vocal et parler.<br><b>WARN : </b>Aucun</b>
+      </div>
+    </div>
+  
+      <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
+      <div class="icon-box iconbox-blue">
+        <h4>resume</h4>
+        <p><b>Description : </b>Reprend la musique.<br><b>Permission : </b>Se connecter à un salon vocal et parler.<br><b>WARN : </b>Aucun</b>
+      </div>
+    </div>
+
+    <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
+      <div class="icon-box iconbox-blue">
+        <h4>skip</h4>
+        <p><b>Description : </b>Passe la musique.<br><b>Permission : </b>Se connecter à un salon vocal et parler.<br><b>WARN : </b>Aucun</b>
+      </div>
+    </div>
+  
   
     <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
       <div class="icon-box iconbox-blue">
         <h4>brique</h4>
-        <p><b>Description : </b>Pour que elbot chante tutititutu<br><b>Permission : </b>Se connecter à un salon vocal et parler.<br><b>WARN : </b>Disponible uniquement dans le salon #817012298057121852</b>Aucun<br><b>Code:</b> JS <b></p>
+        <p><b>Description : </b>Pour que elbot chante tutititutu<br><b>Permission : </b>Se connecter à un salon vocal et parler.<br><b>WARN : </b>Disponible uniquement dans le salon #817012298057121852</b>Aucun
       </div>
     </div>
   
