--- a/index.html
+++ b/index.html
@@ -218,8 +218,13 @@
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
             <div class="icon"><i class='bx bx-alarm' ></i></div>
             <h4 class="title"><a href="https://github.com/el2zay/reveilleurdebot/tree/main">Reveilleur de bot</a></h4>
-            <p class="description">Reveilleur de bot est un bot qui sert à réveiller des bots qui sont héberger sur des hébergeurs gratuit tel que Glitch. <br> <i>Cliquez sur le titre pour plus d'informations. <i> </p>
-            </div>
+            <p class="description">Reveilleur de bot est un bot qui sert à réveiller des bots qui sont héberger sur des hébergeurs gratuit tel que Glitch. <br> <i>Cliquez sur le titre pour plus d'informations. </i> </p>
+              </div>
+            <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
+              <div class="icon"><i class='bx bx-repeat' ></i></div>
+              <h4 class="title"><a href="https://github.com/el2zay/innaretable">Inarrêtable</a></h4>
+              <p class="description">Inarrêtable est un executable Windows et Unix disponible aussi en plusieurs langues de code mais est aussi un site. Le but de innarêtable est d'être innarêtable<br> <i>Cliquez sur le titre pour plus d'informations.<br>Pour accéder au site de innaretable cliquez <a href="https://el2zay.is-a.dev/innaretable">ici</a> </i> </p>
+              </div>
 
               
               
