--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
             <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
               <div class="icon"><i class='bx bx-repeat' ></i></div>
               <h4 class="title"><a href="https://github.com/el2zay/innaretable">Inarrêtable</a></h4>
-              <p class="description">Inarrêtable est un executable Windows et Unix disponible aussi en plusieurs langues de code mais est aussi un site. Le but de innarêtable est d'être innarêtable<br> <i>Cliquez sur le titre pour plus d'informations.<br>Pour accéder au site de innaretable cliquez <a href="https://el2zay.is-a.dev/innaretable">ici</a> </i> </p>
+              <p class="description">Inarrêtable est un executable Windows et Unix disponible aussi en plusieurs langues de code mais est aussi un site. Le but de inarrêtable est d'être inarrêtable<br> <i>Cliquez sur le titre pour plus d'informations.<br>Pour accéder au site de innaretable cliquez <a href="https://el2zay.is-a.dev/inarretable/">ici</a> </i> </p>
               </div>
 
               
