--- a/elbot/index.html
+++ b/elbot/index.html
@@ -126,7 +126,7 @@
 
         <div class="section-title">
           <h2>Page d'aide</h2>
-          <p>Ici vous trouverez toutes les commandes de Elbot. (le prefix est "e!") [mise à jour: 06/11/2021 15h33]<br> <h8>36 commandes fonctionnelles et publiques.</h8></p>
+          <p>Ici vous trouverez toutes les commandes de Elbot. (le prefix est "e!") [mise à jour: 07/11/2021 16h58]<br> <h8>38 commandes fonctionnelles et publiques.</h8></p>
         </div>
 <div><b>COMMANDE ÉCRITE</b></div>
       
@@ -144,7 +144,13 @@
       <h4>say</h4>
       <p><b>Description : </b>Pour me faire dire tout et n'importe quoi<br><b>Permission : </b>Gérer les messages<br><b>WARN : </b>Vous ne pouvez pas mentionner @here/@everyone</b></p>
     </div>
-  
+
+    <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
+      <div class="icon-box iconbox-blue">
+        <h4>dm</h4>
+        <p><b>Description : </b>Pour me faire dire tout et n'importe quoi en mp a des personnes grâce à leurs ID's<br><b>Permission : </b>Aucune<br><b>WARN : </b>Il est obligatoire de mettre l'ID d'une personne et pas sa mention. <b>Exemple:</b>e!dm 727572859727380531 tu es un magnifique Nyan Cat <br><b>IMPORTANT</b>Si vous subissez un harcelement ou que vous souhaitiez juste que personne ne vous MP sous l'identitté de elbot MP el2zay sur un de ses réseaux pour qu'il ne soit plus possible à quiconque de vous MP sous l'identité de elbot.</p>
+      </div>
+    
   </div>
   <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
     <div class="icon-box iconbox-blue">
@@ -158,6 +164,12 @@
       <h4>contact</h4>
       <p><b>Description : </b>Pour contacter el2zay via le bot<br><b>Permission : </b>Envoyer un message<br><b>WARN : Aucun</b></p> </div>
     </div>
+
+    <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
+      <div class="icon-box iconbox-blue">
+        <h4>count</h4>
+        <p><b>Description : </b>COmpter le nombre de caractères dans un mot ou une phrase.<br><b>Permission : </b>Envoyer un message<br><b>WARN : Aucun</b></p> </div>
+      </div>
 
   <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
     <div class="icon-box iconbox-blue">
