--- a/elbot/index.html
+++ b/elbot/index.html
@@ -144,14 +144,8 @@
       <h4>say</h4>
       <p><b>Description : </b>Pour me faire dire tout et n'importe quoi<br><b>Permission : </b>Gérer les messages<br><b>WARN : </b>Vous ne pouvez pas mentionner @here/@everyone</b></p>
     </div>
-
-    <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
-      <div class="icon-box iconbox-blue">
-        <h4>dm</h4>
-        <p><b>Description : </b>Pour me faire dire tout et n'importe quoi en mp a des personnes grâce à leurs ID's<br><b>Permission : </b>Aucune<br><b>WARN : </b>Il est obligatoire de mettre l'ID d'une personne et pas sa mention. <b>Exemple:</b>e!dm 727572859727380531 tu es un magnifique Nyan Cat <br><b>IMPORTANT</b>Si vous subissez un harcelement ou que vous souhaitiez juste que personne ne vous MP sous l'identitté de elbot MP el2zay sur un de ses réseaux pour qu'il ne soit plus possible à quiconque de vous MP sous l'identité de elbot.</p>
-      </div>
-    
   </div>
+
   <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
     <div class="icon-box iconbox-blue">
       <h4>chinese</h4>
@@ -162,14 +156,16 @@
   <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
     <div class="icon-box iconbox-blue">
       <h4>contact</h4>
-      <p><b>Description : </b>Pour contacter el2zay via le bot<br><b>Permission : </b>Envoyer un message<br><b>WARN : Aucun</b></p> </div>
+      <p><b>Description : </b>Pour contacter el2zay via le bot<br><b>Permission : </b>Envoyer un message<br><b>WARN :</b>b Aucun</p>
     </div>
+  </div>
 
     <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
       <div class="icon-box iconbox-blue">
         <h4>count</h4>
-        <p><b>Description : </b>COmpter le nombre de caractères dans un mot ou une phrase.<br><b>Permission : </b>Envoyer un message<br><b>WARN : Aucun</b></p> </div>
+        <p><b>Description : </b>Compter le nombre de caractères dans un mot ou une phrase.<br><b>Permission : </b>Envoyer un message<br><b>WARN : Aucun</b></p> </div>
       </div>
+
 
   <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
     <div class="icon-box iconbox-blue">
@@ -367,7 +363,13 @@
   </div>
 
 
-  
+  <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
+    <div class="icon-box iconbox-blue">
+      <h4>dm</h4>
+      <p><b>Description : </b>Pour me faire dire tout et n'importe quoi en mp a des personnes grâce à leurs ID's<br><b>WARN : </b>Il est obligatoire de mettre l'ID d'une personne et pas sa mention. <br><b>Exemple:</b>e!dm 727572859727380531 tu es un magnifique Nyan Cat<br><b>IMPORTANT: </b>Si vous subissez un harcélement ou que vous souhaitiez juste que personne ne vous MP sous l'identité de elbot MP el2zay sur un de ses réseaux pour qu'il ne soit plus possible à quiconque de vous MP sous l'identité de elbot.</p>
+    </div>
+  </div>
+
   <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
     <div class="icon-box iconbox-blue">
       <h4>D'autres commandes...</h4>
