--- a/elbot/index.html
+++ b/elbot/index.html
@@ -126,7 +126,7 @@
 
         <div class="section-title">
           <h2>Page d'aide</h2>
-          <p>Ici vous trouverez toutes les commandes de Elbot. (le prefix est "e!") [mise à jour: 07/11/2021 16h58]<br> <h8>38 commandes fonctionnelles et publiques.</h8></p>
+          <p>Ici vous trouverez toutes les commandes de Elbot. (le prefix est "e!") [mise à jour: 07/11/2021 16h58]<br> <h8>39 commandes fonctionnelles et publiques.</h8></p>
         </div>
 <div><b>COMMANDE ÉCRITE</b></div>
       
@@ -170,7 +170,7 @@
   <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="20">
     <div class="icon-box iconbox-blue">
       <h4>sondage</h4>
-      <p><b>Description : </b>Crée un sondage avec les choix "oui" et "non" grâce aux réactions.<br><b>Permission : </b>Envoyer un message et des réactions<br><b>WARN : </b>Ne fonctionne pas pour le moment.</b></p>
+      <p><b>Description : </b>Crée un sondage avec les choix "oui" et "non" grâce aux réactions.<br><b>Permission : </b>Envoyer un message et des réactions<br><b>WARN : </b>Aucun.</b></p>
     </div>
   </div>
 
